templates/starwhale_template.yaml
---
# Source: starwhale/templates/controller-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller
  namespace: default
  labels:
    
    starwhale.ai/role: controller
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: controller
spec:
  ports:
    - port: 8082
      protocol: TCP
  selector:
    
    starwhale.ai/role: controller
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: controller
---
# Source: starwhale/templates/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: "default"
  labels:
    starwhale.ai/role: minio
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: minio
spec:
  type: "ClusterIP"
  ports:
    - name: minio-api
      port: 9000
      targetPort: minio-api
    - name: minio-console
      port: 9001
      targetPort: minio-console
  selector: 
    starwhale.ai/role: minio
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: minio
---
# Source: starwhale/templates/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: "default"
  labels: 
    starwhale.ai/role: mysql
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: mysql
spec:
  type: "ClusterIP"
  ports:
    - name: mysql-api
      port: 3306
      targetPort: mysql-api
      protocol: TCP
  selector: 
    starwhale.ai/role: mysql
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: mysql
---
# Source: starwhale/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  labels: 
    starwhale.ai/role: controller
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: controller

spec:
  replicas: 1
  selector:
    matchLabels: 
      starwhale.ai/role: controller
      app.kubernetes.io/name: release-name-starwhale
      app.kubernetes.io/instance: controller
  template:
    metadata:
      labels: 
        starwhale.ai/role: controller
        app.kubernetes.io/name: release-name-starwhale
        app.kubernetes.io/instance: controller
    spec:
      volumes:
        - name: wal-cache
          emptyDir: {}
      serviceAccountName: release-name-starwhale
      containers:
        - name: controller
          image: "ghcr.io/star-whale/server:0.6.13"
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: wal-cache
              mountPath: "/opt/starwhale.java/datastore-wal-cache"
          resources:
            limits:
              memory: 8G
            requests:
              memory: 6G
          livenessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 15
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9082
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 15
            successThreshold: 1
            failureThreshold: 60
          startupProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 15
            successThreshold: 1
            failureThreshold: 60
---
# Source: starwhale/templates/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: "default"
  labels: 
    starwhale.ai/role: minio
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: minio
spec:
  selector:
    matchLabels:
      starwhale.ai/role: minio
      app.kubernetes.io/name: release-name-starwhale
      app.kubernetes.io/instance: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        starwhale.ai/role: minio
        app.kubernetes.io/name: release-name-starwhale
        app.kubernetes.io/instance: minio
    spec:
      containers:
        - name: minio
          image: "docker.io/bitnami/minio:2022.6.20-debian-11-r0"
          volumeMounts:
            - mountPath: /data
              name: data
          securityContext:
            runAsUser: 1001
          ports:
            - name: minio-api
              containerPort: 9000
              protocol: TCP
            - name: minio-console
              containerPort: 9001
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: minio-api
              scheme: "HTTP"
          readinessProbe:
            tcpSocket:
              port: minio-api
          resources:
            limits:
              cpu: 2000m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 250Mi
      securityContext:
        fsGroup: 1001
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio
---
# Source: starwhale/templates/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: "default"
  labels: 
    starwhale.ai/role: mysql
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: mysql

spec:
  selector:
    matchLabels: 
      starwhale.ai/role: mysql
      app.kubernetes.io/name: release-name-starwhale
      app.kubernetes.io/instance: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels: 
        starwhale.ai/role: mysql
        app.kubernetes.io/name: release-name-starwhale
        app.kubernetes.io/instance: mysql
    spec:
      containers:
        - name: mysql
          image: "docker.io/bitnami/mysql:8.0.29-debian-10-r2"
          volumeMounts:
            - mountPath: /bitnami/mysql
              name: data
            - mountPath: /opt/bitnami/mysql/conf/my.cnf
              name: config
              subPath: my.cnf
          securityContext:
            runAsUser: 1001
          ports:
            - name: mysql-api
              containerPort: 3306
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - -ec
                - mysqladmin status -uroot -p"${MYSQL_ROOT_PASSWORD}"
          startupProbe:
            exec:
              command:
                - /bin/bash
                - -ec
                - mysqladmin status -uroot -p"${MYSQL_ROOT_PASSWORD}"
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - -ec
                - mysqladmin status -uroot -p"${MYSQL_ROOT_PASSWORD}"
          resources:
            limits:
              cpu: 2000m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 250Mi
      securityContext:
        fsGroup: 1001
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql
        - name: config
          configMap:
            name: mysql
---
# Source: starwhale/templates/controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controller
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 30g

spec:
  ingressClassName: nginx
  rules:
    - host: console.pre.intra.starwhale.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controller
                port:
                  number: 8082
---
# Source: starwhale/templates/minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: "default"
  labels: 
    starwhale.ai/role: minio
    app.kubernetes.io/name: release-name-starwhale
    app.kubernetes.io/instance: minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "30g"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: "nginx"
  rules:
    - host: minio.pre.intra.starwhale.ai
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  name: minio-api
            path: /
            pathType: ImplementationSpecific
    - host: minio-admin.pre.intra.starwhale.ai
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  name: minio-console
            path: /
            pathType: ImplementationSpecific
---
# Source: starwhale/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-starwhale-test-connection"
  labels:
    helm.sh/chart: starwhale-0.6.13
    app.kubernetes.io/version: "0.6.13"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-starwhale:8080']
  restartPolicy: Never
